<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".EditQuest">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campaign_name_input"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/quest_name"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/BorderColor"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quest_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GrayE1"
                android:inputType="textCapWords"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/copper_text_input"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/copper"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/BorderColor"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/copper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GrayE1"
                android:inputType="number"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/silver_text_input"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/silver"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/BorderColor"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/silver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GrayE1"
                android:inputType="number"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gold_text_input"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/gold"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/BorderColor"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GrayE1"
                android:inputType="number"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exp_text_input"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/exp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/BorderColor"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GrayE1"
                android:inputType="number"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"

                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_quest"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/filled_round_button"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/save_quest"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:theme="@android:style/ThemeOverlay.Material.Dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>